[package]
name = "bioenpro4to_gateway"
version = "0.1.0"
authors = ["lore-lml <lorenzo.limoli@studenti.polito.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
iota_identity_lib = { git="https://github.com/lore-lml/iota-identity-lib.git" }
bioenpro4to_channel_manager = { git="https://github.com/lore-lml/bioenpro4to_channel_manager.git" }
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
anyhow = { version = "1.0", default-features = false }
