[package]
name = "bioenpro4to_gateway"
version = "0.1.0"
authors = ["lore-lml <lorenzo.limoli@studenti.polito.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-cors = "0.6.0-beta.2"
iota_identity_lib = { git="https://github.com/lore-lml/iota-identity-lib.git" }
bioenpro4to_channel_manager = { git="https://github.com/lore-lml/bioenpro4to_channel_manager.git", branch="dev2" }
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
anyhow = { version = "1.0", default-features = false }
chrono = "0.4.19"
dotenv = "0.15.0"
regex = "^1"
derive_more = "0.99.16"
rand = "0.8.4"

# Postgres Database
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.2"
config = "0.11.0"
deadpool-postgres = "0.9.0"
